Add placeholder scenes

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="assets/js/utils.js"></script>
     <script type="text/javascript" src="assets/js/Debug.js"></script>
     <script type="text/javascript" src="assets/js/Title.js"></script>
+    <script type="text/javascript" src="assets/js/Setup.js"></script>
+    <script type="text/javascript" src="assets/js/Prediction.js"></script>
+    <script type="text/javascript" src="assets/js/Interaction.js"></script>
+    <script type="text/javascript" src="assets/js/Impression.js"></script>
+    <script type="text/javascript" src="assets/js/Takeaway.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
