--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="assets/js/Prediction.js"></script>
     <script type="text/javascript" src="assets/js/Interaction.js"></script>
     <script type="text/javascript" src="assets/js/Impression.js"></script>
+    <script type="text/javascript" src="assets/js/SlowMotion.js"></script>
     <script type="text/javascript" src="assets/js/Takeaway.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
