--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.sound.min.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/scripts/p5/lib/p5.min.js"></script>
+    <script type-"text/javascript" src="/scripts/p5/lib/addons/p5.sound.min.js"></script>
     <script type="text/javascript" src="assets/js/lib/p5.serialport.js"></script>
     <script type="text/javascript" src="assets/js/lib/p5.scenemanager.js"></script>
     <script type="text/javascript" src="assets/js/utils.js"></script>
+    <script type="text/javascript" src="assets/js/GenericScene.js"></script>
     <script type="text/javascript" src="assets/js/Debug.js"></script>
     <script type="text/javascript" src="assets/js/Title.js"></script>
     <script type="text/javascript" src="assets/js/Setup.js"></script>
@@ -22,6 +23,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="conductor.js"></script>
   </body>
 </html>
