--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -6,9 +6,8 @@
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/scripts/p5/lib/p5.min.js"></script>
     <script type-"text/javascript" src="/scripts/p5/lib/addons/p5.sound.min.js"></script>
-    <script type="text/javascript" src="assets/js/lib/p5.serialport.js"></script>
     <script type="text/javascript" src="assets/js/lib/p5.scenemanager.js"></script>
-    <script type="text/javascript" src="assets/js/utils.js"></script>
+    <script type="text/javascript" src="/utils.js"></script>
     <script type="text/javascript" src="assets/js/GenericScene.js"></script>
     <script type="text/javascript" src="assets/js/Debug.js"></script>
     <script type="text/javascript" src="assets/js/Title.js"></script>
