--- a/public/player/index.html
+++ b/public/player/index.html
@@ -25,16 +25,32 @@
   <body>
     <div class="predictions-form">
       <div class="form-group">
-        <label for="expectation-self">How would your greet your friend, without speaking?</label>
-        <input id="expectation-self" type="text" class="form-control" />
+        <label for="predictions-self">How would your greet your friend, without speaking?</label>
+        <input id="predictions-self" type="text" class="form-control" />
       </div>
 
       <div class="form-group">
-        <label for="expectation-friend">How do you expect your friend to greet you?</label>
-        <input id="expectation-friend" type="text" class="form-control" />
+        <label for="predictions-friend">How do you expect your friend to greet you?</label>
+        <input id="predictions-friend" type="text" class="form-control" />
       </div>
 
       <button id="predictions-submit" type="submit" class="btn btn-primary">
+        Submit
+      </button>
+    </div>
+
+    <div class="impressions-form">
+      <div class="form-group">
+        <label for="impressions-leader">Did you lead the greeting, or follow?</label>
+        <input id="impressions-leader" type="range" min="0" max="255" class="form-control" />
+      </div>
+
+      <div class="form-group">
+        <label for="expectation-awkward">How awkward was the experience?</label>
+        <input id="impressions-awkward" type="range" min="0" max="255" class="form-control" />
+      </div>
+
+      <button id="impressions-submit" type="submit" class="btn btn-primary">
         Submit
       </button>
     </div>
