:shipit: Drag as input

--- a/public/conductor/index.html
+++ b/public/conductor/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="assets/js/Setup.js"></script>
     <script type="text/javascript" src="assets/js/Prediction.js"></script>
     <script type="text/javascript" src="assets/js/Interaction.js"></script>
+    <script type="text/javascript" src="assets/js/InputUncertainty.js"></script>
     <script type="text/javascript" src="assets/js/Impression.js"></script>
     <script type="text/javascript" src="assets/js/SlowMotion.js"></script>
     <script type="text/javascript" src="assets/js/Takeaway.js"></script>
