--- a/public/player/index.html
+++ b/public/player/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="assets/js/Setup.js"></script>
     <script type="text/javascript" src="assets/js/Prediction.js"></script>
     <script type="text/javascript" src="assets/js/Interaction.js"></script>
+    <script type="text/javascript" src="assets/js/InputUncertainty.js"></script>
     <script type="text/javascript" src="assets/js/Impression.js"></script>
     <script type="text/javascript" src="assets/js/SlowMotion.js"></script>
     <script type="text/javascript" src="assets/js/Takeaway.js"></script>
@@ -88,6 +89,15 @@
       <button id="impressions-submit" type="submit" class="btn btn-primary">
         Submit
       </button>
+    </div>
+
+    <div class="input-uncertainty-demo">
+      <h1>How in sync were you?</h1>
+
+      <div class="position-relative">
+        <h3 class="position-top">in-sync</h3>
+        <h3 class="position-bottom">out-of-sync</h3>
+      </div>
     </div>
 
     <script src="player.js"></script>
