--- a/public/player/index.html
+++ b/public/player/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="assets/js/Prediction.js"></script>
     <script type="text/javascript" src="assets/js/Interaction.js"></script>
     <script type="text/javascript" src="assets/js/InputUncertainty.js"></script>
+    <script type="text/javascript" src="assets/js/InputEmoji.js"></script>
     <script type="text/javascript" src="assets/js/Impression.js"></script>
     <script type="text/javascript" src="assets/js/SlowMotion.js"></script>
     <script type="text/javascript" src="assets/js/Takeaway.js"></script>
@@ -97,6 +98,14 @@
       <div class="position-relative">
         <h3 class="position-top">in-sync</h3>
         <h3 class="position-bottom">out-of-sync</h3>
+      </div>
+    </div>
+
+    <div class="input-emoji-demo">
+      <h1>Pick 3 emojis that describe the experience</h1>
+
+      <div class="position-relative">
+        <!-- emojis -->
       </div>
     </div>
 
